tests/parser-test-files/bad-files/parse-let.5.error
error: Malformed let binding
  --> test:5:10
   |
 5 |   (let ((x)) 5))
   |           ^ let bindings must have a value
